--- a/main.html
+++ b/main.html
@@ -8,18 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <nav>
-
-		<a href="#actor" id="nav-actor">Actors</a><br><br>
-		<a href="#quote"id="nav-quote">Quote</a>
-	 </nav>
+	<script type="text/javascript" src="./script.js">
+	</script>
 	 <header>
 		<h1>Om Shanti Om</h1>
 	 </header>
+	 <nav>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote"id="nav-quote">Quote</a>
+	 </nav>
+
       <div>
 	 <summary><h3>Summary</h3></Summary>
          <p>Junior artist Om Makhija dreams of becoming a big star and is in love with top actress Shantipriya. He spends most of his time in film studios with his friend Pappu, and they have had small roles in some big films. During a shoot Om saves Shantipriya and they become friends, and Om tries to express his love to her. Later he hears Shantipriya and producer Mukesh Mehra talking about their secret marriage and is devastated. Mukesh decides to shelve his film as Shantipriya is pregnant, but kills her instead. Om witnesses the murder before he too dies. Years later he is reborn as Superstar OK and recollects his past life when he comes across Mukesh--now known as Mike--and decides to work on a film with him. During auditions he meets Sandy, a Shantipriya lookalike, and with her and Pappu he plans to have Mukesh confess to Shantipriya's murder.</p>
 	 </div>
+
+	 <img src="https://feeds.abplive.com/onecms/images/uploaded-images/2022/08/19/c3baaf7d327ed94c44d35b2347b75e0b1660911572393529_original.jpg" alt="image">
 	 <section id="Actor">
 		<h3>Actors</h3>
 		<ul>
@@ -50,9 +54,6 @@
 	 <footer>
 		Produced by	: Gauri Khan
 	 </footer>
-
-    <script type="text/javascript" src="./script.js">
-</script>
 
 </body>
 
