--- a/main.html
+++ b/main.html
@@ -24,7 +24,8 @@
 	 </div>
 
 	 <img src="https://feeds.abplive.com/onecms/images/uploaded-images/2022/08/19/c3baaf7d327ed94c44d35b2347b75e0b1660911572393529_original.jpg" alt="image">
-	 <section id="Actor">
+	 
+	 <section id="actor">
 		<h3>Actors</h3>
 		<ul>
 		   <li>Deepika Padukone</li>
@@ -35,6 +36,7 @@
 		   <li>	Yuvika Chaudhary</li>
 		</ul>
 	 </section>
+
 	 <section id="quote">
           <h3>Quotes</h3>
 		  <ul>
@@ -51,8 +53,9 @@
 		<p>IMDB Rating :9.5</p>
 		<p>Released Date:9 November ,2007</p>
 	 </aside>
+
 	 <footer>
-		Produced by	: Gauri Khan
+		Produced by\t:Gauri Khan
 	 </footer>
 
 </body>
