--- a/main.html
+++ b/main.html
@@ -55,7 +55,8 @@
 	 </aside>
 
 	 <footer>
-		<p>Produced by\t:Gauri Khan</p>
+		<p>Produced by: &lt 
+			Gauri Khan &gt </p>
 	 </footer>
 
 </body>
